Adding Heikin-Ashi based phase analysers